--- a/daml/java/dovetail-daml-events/pom.xml
+++ b/daml/java/dovetail-daml-events/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>daml-integration</artifactId>
+  <artifactId>daml-events</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <properties>
   	<maven.compiler.release>8</maven.compiler.release>
@@ -13,12 +13,7 @@
             <groupId>com.daml.ledger</groupId>
             <artifactId>bindings-rxjava</artifactId>
             <version>100.13.34</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.google.protobuf</groupId>
-                    <artifactId>protobuf-lite</artifactId>
-                </exclusion>
-            </exclusions>
+            
         </dependency>
         
         <dependency>
@@ -42,7 +37,18 @@
         <artifactId>commons-lang3</artifactId>
         <version>3.4</version>
     </dependency>
+    
+     
+	
+	 <dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.12</version>
+  		<scope>test</scope>
+  	</dependency>
   	 </dependencies>
+  	
+  	
    <build>
    	<plugins>
 			<plugin>
@@ -58,21 +64,7 @@
 		        <artifactId>maven-shade-plugin</artifactId>
 		        <version>3.1.1</version>
 		        <executions>
-				    <execution>
-				      <id>DamlParser</id>
-				      <phase>package</phase>
-				      <goals>
-				         <goal>shade</goal>
-				      </goals>   
-				      <configuration>
-				        <transformers>
-				          <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">                        
-				            <mainClass>com.tibco.dovetail.daml.parser.DamlLfParser</mainClass>
-				          </transformer>
-				        </transformers>
-				        <finalName>daml-parser-${version}</finalName>
-				      </configuration>        
-				    </execution>
+		
 				    <execution>
 				      <id>daml-event-server</id>
 				      <phase>package</phase>
@@ -80,12 +72,15 @@
 				         <goal>shade</goal>
 				      </goals>   
 				      <configuration>
+				        
 				        <transformers>
 				          <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">                        
 				            <mainClass>com.tibco.dovetail.daml.event.DAMLEventServer</mainClass>
 				          </transformer>
 				        </transformers>
-				        <finalName>daml-event-server-${version}</finalName>
+				        <finalName>daml-event-server-${project.version}</finalName>
+				        <shadedArtifactAttached>true</shadedArtifactAttached>
+				        <shadedClassifierName>uber</shadedClassifierName>
 				      </configuration>  
 				    </execution>
 				  </executions>
